Deployment-code/backend-db.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: db-easypay
spec:
  ports:
  - port: 3306
    protocol: TCP
    #targetPort: 80
  selector:
    db: eaaypay
    type: ClusterIP
#status:
#  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    db: eaaypay
  name: db-easypay
spec:
  replicas: 1 
  selector:
    matchLabels:
      db: eaaypay
  strategy: {}
  template:
    metadata:
      name: easypay-mysql
      labels:
        db: eaaypay      
    spec:
      containers:
      - image: docker.io/mysql:5.6
        name: easypay-db-container
        ports:
        - containerPort: 3306  
        resources: {}
status: {}

          #volumeMounts:
          #- mountPath: /var/lib/mysql
          #name: easypay-volume
          #command: ["/bin/sh"]
          #args: ["-c", "while true; do echo hello; sleep 10;done"]
          #volumes:
          # - emptyDir: {}
          #name: easypay-volume
